FIX: word break on li elementsdx

--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ body ol li p {
   vertical-align: top;
   display: inline-block;
   width: calc(100% - 30px);
-  word-break: break-all;
+  word-break: keep-all;
 }
 body .bold {
   font-weight: 700;
